[metadata]
name    = cppbktree
version = 0.1.0

description   = C++ Implementation of a Burkhard-Keller Tree (BK-Tree)
url           = https://github.com/mxmlnkn/cppbktree
author        = Maximilian Knespel
author_email  = mxmlnkn@github.de
license       = MIT

classifiers   =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C++
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = cppbktree
python_requires = >= 3.6
